<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/RelativeLayout1"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
 
 <LinearLayout
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
 
 <LinearLayout
 android:id="@+id/linearLayout1"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal">

<TextView
 android:id="@+id/tvLgn"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/login">
</TextView>     

<EditText
    android:id="@+id/etLgn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text" >

<requestFocus>
</requestFocus>
</EditText>          
</LinearLayout>

 <LinearLayout
 android:id="@+id/linearLayout2"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal">

<TextView
 android:id="@+id/tvPsw"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/password">
</TextView>     

<EditText
    android:id="@+id/etPsw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="text" >

<requestFocus>
</requestFocus>
</EditText>   
     
</LinearLayout>

 <LinearLayout
 android:id="@+id/linearLayout3"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal">
<Button
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/save"
 android:id="@+id/btnSave">
</Button>
<Button
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/load"
 android:id="@+id/btnLoad">
</Button>

</LinearLayout>
<TableLayout 
             android:stretchColumns="*"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
<TableRow android:padding="5dp">
 <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/melody1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melody2" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melody3" />

        
    </RadioGroup>
    <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightnesslow" />
 
 
 </TableRow>
 </TableLayout>
 
</LinearLayout>
 
</RelativeLayout>

