<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/RelativeLayout1"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
  <LinearLayout
 android:orientation="vertical"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent">
<LinearLayout
 android:id="@+id/linearLayout9"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal">
<Button
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/accept"
 android:id="@+id/btnAcc">
</Button>
<Button
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/reject"
 android:id="@+id/btnRjc">
</Button>
<Button
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:text="@string/CallAbon"
 android:id="@+id/btnCallAbon">
</Button>
</LinearLayout>
<ListView
 android:id="@+id/lvMain"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
</ListView>
</LinearLayout>
</RelativeLayout>